@@ -5,6 +5,8 @@ Release History
 1.0.0b2 (unreleased)
 --------------------
 
+- LogTail returns lines as byte strings in Python 3 to avoid codec issues
+  (#11564).
 - LogTail gives a line-based iterator instead of a file object (#11564).
 - Basic API docs for the most important classes (#11612).
 - Made compatible with Python 2.7 (#11533).
